--- a/labb/notis-webservice/pom.xml
+++ b/labb/notis-webservice/pom.xml
@@ -37,6 +37,7 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-rx-java</artifactId>
             <version>3.0.0</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
