--- a/labb/notis-webservice/src/main/resources/log4j.properties
+++ b/labb/notis-webservice/src/main/resources/log4j.properties
@@ -1,5 +1,4 @@
-log4j.rootLogger=INFO, R
-#log4j.rootLogger=debug, stdout, R
+log4j.rootLogger=debug, stdout, R
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -10,7 +9,8 @@ log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.R.File=example.log
 
-log4j.appender.R.MaxFileSize=100KB
+log4j.appender.R.MaxFileSize=512KB
+
 # Keep one backup file
 log4j.appender.R.MaxBackupIndex=1
 
