--- a/labb/notis-webservice/pom.xml
+++ b/labb/notis-webservice/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>notis-webservice</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>notis-lab</groupId>
+            <artifactId>notis-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
