--- a/labb/pom.xml
+++ b/labb/pom.xml
@@ -13,6 +13,7 @@
         <module>notis-webservice</module>
         <module>notis-domain</module>
         <module>notis-util</module>
+        <module>notis-notificationHandler</module>
     </modules>
 
     <dependencies>
@@ -66,7 +67,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>${main.class}</Main-Class>
+                                        <Main-Class>io.vertx.core.Starter</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                                 <transformer
