--- a/labb/pom.xml
+++ b/labb/pom.xml
@@ -9,6 +9,11 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <docker.image>vertx/vertx3-example</docker.image>
+        <vertx.version>3.0.0</vertx.version>
+    </properties>
+
     <modules>
         <module>notis-webservice</module>
         <module>notis-domain</module>
@@ -30,10 +35,63 @@
             <version>1.2.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-core</artifactId>
+            <version>${vertx.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-hazelcast</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+            <plugin>
+                <!--
+                  This plugin builds the Docker image. It merges src/main/docker/Dockerfile with the resources set in the
+                  configuration. The resources should embed the current project and its dependencies. Here there is no
+                  dependencies.
+                -->
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.2.8</version>
+                <executions>
+                    <execution>
+                        <id>docker</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
+                    <imageName>${docker.image}</imageName>
+                    <resources>
+                        <resource>
+                            <targetPath>/verticles</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <includes>
+                                <!--<include>${project.artifactId}-${project.version}.jar</include>-->
+                                <include>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</include>
+                            </includes>
+                        </resource>
+                    </resources>
+                </configuration>
+            </plugin>
+            </plugins>
+        </pluginManagement>
+
+
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -52,6 +110,8 @@
                 </configuration>
             </plugin>
 
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -68,6 +128,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Main-Class>io.vertx.core.Starter</Main-Class>
+                                        <Main-Verticle>com.omegapoint.ws.RestServiceImpl</Main-Verticle>
                                     </manifestEntries>
                                 </transformer>
                                 <transformer
@@ -83,6 +144,8 @@
                     </execution>
                 </executions>
             </plugin>
+
+
         </plugins>
     </build>
 
