--- a/labb/notis-webservice/pom.xml
+++ b/labb/notis-webservice/pom.xml
@@ -20,6 +20,12 @@
         </dependency>
 
         <dependency>
+            <groupId>notis-lab</groupId>
+            <artifactId>notis-notificationHandler</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
             <version>3.0.0</version>
