Fixed docker build from Maven. Updated to README explaining how to build and run docker image. Update to .gitignore

--- a/labb/notis-final/pom.xml
+++ b/labb/notis-final/pom.xml
@@ -37,6 +37,43 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <!--
+                      This plugin builds the Docker image. It merges src/main/docker/Dockerfile with the resources set in the
+                      configuration. The resources should embed the current project and its dependencies. Here there is no
+                      dependencies.
+                    -->
+                    <groupId>com.spotify</groupId>
+                    <artifactId>docker-maven-plugin</artifactId>
+                    <version>0.2.8</version>
+                    <executions>
+                        <execution>
+                            <id>docker</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>build</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
+                        <imageName>omegapoint/notis</imageName>
+                        <resources>
+                            <resource>
+                                <targetPath>/verticles</targetPath>
+                                <directory>${project.build.directory}</directory>
+                                <includes>
+                                    <include>${project.artifactId}-${project.version}-fat.jar</include>
+                                </includes>
+                            </resource>
+                        </resources>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
