--- a/labb/.gitignore
+++ b/labb/.gitignore
@@ -1,10 +1,13 @@
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, vert.x
 
 *.class
 */target/*
 
 *.iml
 *.log
+
+Vert.x
+example.log
 
 ## Directory-based project format:
 .idea/
