--- a/labb/notis-final/pom.xml
+++ b/labb/notis-final/pom.xml
@@ -90,7 +90,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>com.omegapoint.bid.Main</Main-Class>
+                                        <Main-Class>io.vertx.core.Starter</Main-Class>
                                         <Main-Verticle>com.omegapoint.ws.RestServiceImpl</Main-Verticle>
                                     </manifestEntries>
                                 </transformer>
