--- a/labb/notis-verticles/notis-notification-handlers/pom.xml
+++ b/labb/notis-verticles/notis-notification-handlers/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>notis-apns</module>
+        <module>notis-gcm</module>
     </modules>
 
 
