--- a/labb/notis-verticles/notis-notification-handlers/notis-apns/pom.xml
+++ b/labb/notis-verticles/notis-notification-handlers/notis-apns/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
 
     <artifactId>notis-apns</artifactId>
 
@@ -15,12 +16,6 @@
         <dependency>
             <groupId>notis-lab</groupId>
             <artifactId>notis-util</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>notis-lab</groupId>
-            <artifactId>notis-notification-handlers</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
