--- a/labb/notis-verticles/notis-notification-handlers/notis-gcm/pom.xml
+++ b/labb/notis-verticles/notis-notification-handlers/notis-gcm/pom.xml
@@ -8,17 +8,12 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>notis-lab</groupId>
             <artifactId>notis-util</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>notis-lab</groupId>
-            <artifactId>notis-notification-handlers</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
@@ -42,7 +37,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Main-Class>io.vertx.core.Starter</Main-Class>
-                                        <Main-Verticle>com.omegapoint.notification.handlers.apns.</Main-Verticle>
+                                        <Main-Verticle>com.omegapoint.notification.handlers.gcm.GcmReceiver</Main-Verticle>
                                     </manifestEntries>
                                 </transformer>
                                 <transformer
