Added notis-integration-tests module

--- a/labb/pom.xml
+++ b/labb/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>notis-util</module>
         <module>notis-verticles</module>
+        <module>notis-integration-tests</module>
     </modules>
 
     <dependencies>
