Added GCM Push functionality to GcmReceiver

--- a/labb/notis-verticles/notis-notification-handlers/notis-gcm/pom.xml
+++ b/labb/notis-verticles/notis-notification-handlers/notis-gcm/pom.xml
@@ -16,6 +16,17 @@
             <artifactId>notis-util</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20141113</version>
+        </dependency>
+
     </dependencies>
 
     <artifactId>notis-gcm</artifactId>
