--- a/labb/.gitignore
+++ b/labb/.gitignore
@@ -1,7 +1,7 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, vert.x
 
 *.class
-*/target/*
+target/
 
 *.iml
 *.log
